tests/intend_failure/empty_variant.stderr
error: FromVariants can only use unamed members, failed for Variants::None
 --> tests/intend_failure/empty_variant.rs:2:10
  |
2 | #[derive(FromVariants)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromVariants` (in Nightly builds, run with -Z macro-backtrace for more info)
